--- a/CurrencyChecker/CurrencyChecker/Module/CurrencyChecker/Resource/CurrencyTableViewCell.xib
+++ b/CurrencyChecker/CurrencyChecker/Module/CurrencyChecker/Resource/CurrencyTableViewCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0.0" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dPF-Ee-THg">
+                    <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0.0" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dPF-Ee-THg">
                         <rect key="frame" x="317.5" y="6" width="41.5" height="32"/>
                         <accessibility key="accessibilityConfiguration">
                             <bool key="isElement" value="NO"/>
